--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -80,8 +80,8 @@
             </div>
         </div>
         <div class="panel">
-            <form id="locationInput">
-                <input type="text" class="search" placeholder="Search location ..."/>
+            <form id="locationInput" action="{{ url_for('home_blueprint.home') }}" method="POST">
+                <input type="text" class="search" name="city" placeholder="Search location ..."/>
                 <button type="submit" class="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-search" >
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
