--- a/flask_app/static/main.css
+++ b/flask_app/static/main.css
@@ -7,6 +7,16 @@ body{
     box-sizing: border-box;
 }
 
+
+
+.cities{
+    height: 200px;
+    overflow-y: scroll;
+
+}
+
+
+
 h1,h3{
     font-weight: 400;
 }
