--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -29,8 +29,8 @@
                     </div>
                     <button> logout </button>
                 {% else %}
-                    <button> <a href="{{url_for('authentication_blueprint.login')}}" class="text-decoration: none !important;" > SignIn</a> </button>
-                    <button > <a href="{{url_for('authentication_blueprint.signup')}}" class="text-decoration: none !important;" > SignUp</a></button>
+                    <button> <a href="{{url_for('authentication_blueprint.login')}}" style="text-decoration: none !important;" > SignIn</a> </button>
+                    <button > <a href="{{url_for('authentication_blueprint.signup')}}" style="text-decoration: none !important;" > SignUp</a></button>
                 {% endif %}
                 
             </div>  
@@ -85,13 +85,13 @@
                 <button type="submit" class="submit">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"  class="bi bi-search" >
                         <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
-                      </svg>
+                    </svg>
                 </button>
             </form>
             <ul class="cities">
-                {%for city in cities%}
-                <li id={{city.city}} class="city"><a href="http://localhost:5000/{{city.city}}" style="color: inherit;text-decoration: none;">{{city.city}}</a></li>
-                {%endfor%}
+                {% for city in cities %}
+                <li class="city" data-nom="{{ city.nom }}">{{ city.nom }}</li>
+                {% endfor %}
                 <!-- <li id="my-button" class="city">cold country</li>
                 <li id="my-button" class="city">sunny country</li>
                 <li id="my-button" class="city">faza country</li>
