--- a/flask_app/static/main.css
+++ b/flask_app/static/main.css
@@ -110,7 +110,7 @@ h1,h3{
     margin: 0;
     border: none;
     outline: none;
-    background: #fa6d1b;
+    background: rgba(110,110, 110, 0.25);;
     color: #fff;
     cursor: pointer;
     font-size: 1.2em;
@@ -170,7 +170,72 @@ h1,h3{
     align-items: center;
 }
 
-.favori {
-
-display : flex;
+.button-lien,.image-button{
+    background: transparent;
+    border-radius: 10px;
 }
+a{
+    color: white; /* Couleur du texte du lien */
+    outline: none;
+    text-decoration: none; /* Pas de soulignement */
+    border:none
+  }
+.title
+{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-70%);
+    width: max-content;
+}
+.historic,.favori{
+    display: flex;
+  align-items: center; 
+    
+}
+.add-fav{
+    display: block;
+    margin: 0.5em 0;
+}
+.image-button {
+    width: 20px; /* Largeur de l'image */
+    height: 30px; /* Hauteur de l'image */
+    background-size: cover; /* Ajuste la taille de l'image pour remplir le bouton */
+    background-repeat: no-repeat; /* Empêche la répétition de l'image */
+    border: none; /* Supprime la bordure par défaut du bouton */
+    cursor: pointer; /* Affiche un curseur pointer au survol */
+    outline: none; /* Supprime la bordure de focus du bouton */
+  }
+  .menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color:rgba(110,110, 110, 0.25);
+  
+  }
+  
+  .menu li {
+    display: inline-block;
+    border: 10px;
+  }
+  
+  .menu li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+ 
+  }
+  
+  .menu li a:hover {
+    background-color:rgba(110,110, 110, 0.25);
+    
+   
+  }
+  .menu{
+    
+    border-radius: 10px;
+  }
+  
+  
+  
