--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -42,6 +42,10 @@
                 <button  class="button-lien"> <a href="{{url_for('authentication_blueprint.signup')}}" style="text-decoration: none !important;" > SignUp</a></button>
                 {% endif %}
                  </li>
+                 <li>
+                    <button class="button-lien" ><a href="{{ url_for('home_blueprint.historic') }}" style="text-decoration: none !important;" >Map</a></button>
+                       
+                     </div>
                 </ul>
               </nav>
             
