--- a/flask_app/static/favori.css
+++ b/flask_app/static/favori.css
@@ -74,16 +74,17 @@ h1,h3{
 }
 
 .panel{
+
     position: absolute;
     width: 25%;
     height: 100%;
     top: 0;
     right: 0;
-    background: rgba(110,110, 110, 0.25);
+    background: rgba(255,255, 255, 0.25);
     box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
-    border: 1px solid rgba(110,110,110,0.18);
+    border: 1px solid rgba(255,255,255,0.18);
     z-index: 1;
     padding: 3em 2em;
     overflow-y: scroll;
@@ -99,7 +100,7 @@ h1,h3{
     right: 0;
     border: none;
     outline: none;
-    background: #FFB347;;
+    background: #FFB347;
     color: #fff;
     cursor: pointer;
     font-size: 1.2em;
@@ -108,6 +109,19 @@ h1,h3{
     margin-top: 35px;
 }
 
+
+.aa {
+
+    background: rgba(255,255, 255, 0.25);
+    box-shadow: 0 8px 32px 0 rgba(0,0,0,0.3);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255,0.18);
+    z-index: 1;
+    margin-left: 1000%;
+    
+
+}
 .submit:hover {
     background: #fff !important;
     color: #000;
@@ -156,6 +170,7 @@ h1,h3{
     color: #fff;
 }
 
+
 .details li{
     display: flex;
     justify-content: space-between;
@@ -168,9 +183,11 @@ display : flex;
 }
 
 .tableau {
-    height : 100%;
-    width : 80%;
-    margin-top : 90px
+    height : 80%;
+    width : 50%;
+    margin-top : 80px;
+    margin-left : 50px
+    
   
 }
 
@@ -189,22 +206,24 @@ display : flex;
 .tableau tr td button {
 
     margin-left : 40%;
-    background: #FFB347;
-    border: 0px solid rgba(255,255,255,0.18);
 
 }
 
 .imp {
 
-    margin : -40px;
-    height: 70px;
+    width: 25px;
+    background-color: transparent;
+    background: none;
+
+
 
 }
 
 .im {
 
-    background: #FFB347;
-    
+    background-color: transparent;
+    background: none;
+
 
 }
 
@@ -215,4 +234,8 @@ display : flex;
 
 .d{
     display : flex;
+}
+
+.titre {
+    margin-left: 50%
 }
