--- a/flask_app/static/historique.css
+++ b/flask_app/static/historique.css
@@ -15,7 +15,7 @@ h1{
 
 .weather-app{
     min-height: 100vh;
-    background-image: url("./assets/images/backgrounds/aditya-vyas-PzhmEp_aDU4-unsplash.jpg");
+    background-image: url("./assets/images/backgrounds/cloudy.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -64,6 +64,13 @@ h1{
     
     
     
+}
+.cloudy{
+    background-image: url("./assets/images/backgrounds/cloudy.jpg");
+}
+
+.sunny{
+    background-image: url("./assets/images/backgrounds/sunny.jpg");
 }
 
 .weather_day{
@@ -116,4 +123,54 @@ input.\=image_menu {
     border-radius: 15px;
    
    
+}
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color:rgba(110,110, 110, 0.25);
+      
+    border-radius: 10px;
+  
+  }
+  
+  .menu li {
+    display: inline-block;
+    border: 10px;
+  }
+  
+  .menu li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+ 
+  }
+  
+  .menu li a:hover {
+    background-color:rgba(110,110, 110, 0.25);
+    
+   
+  }
+  .image-button {
+    width: 20px; /* Largeur de l'image */
+    height: 30px; /* Hauteur de l'image */
+    background-size: cover; /* Ajuste la taille de l'image pour remplir le bouton */
+    background-repeat: no-repeat; /* Empêche la répétition de l'image */
+    border: none; /* Supprime la bordure par défaut du bouton */
+    cursor: pointer; /* Affiche un curseur pointer au survol */
+    outline: none; /* Supprime la bordure de focus du bouton */
+  }
+.weather-app-container{
+    color: #333;
+    text-decoration: none;
+    margin: 10px 20px 15px 30px;
+    
+}
+.button-lien,.image-button{
+    background: transparent;
+    border-radius: 10px;
+}
+.search-bar{
+    margin-left: 270px;
 }
