--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -43,7 +43,7 @@
                 {% endif %}
                  </li>
                  <li>
-                    <button class="button-lien" ><a href="{{ url_for('home_blueprint.historic') }}" style="text-decoration: none !important;" >Map</a></button>
+                    <button class="button-lien" ><a href="{{ url_for('home_blueprint.map') }}" style="text-decoration: none !important;" >Map</a></button>
                        
                      
                 </ul>
