--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
 
 <body>
-  <section class="hero is-info is-fullheight">
+  <section class="hero is-info is-fullheight sunny login">
     <div class="hero-body">
       <div class="container">
         <div class="columns is-centered">
@@ -27,10 +28,10 @@
                       </ul>
                     </div>
                   {% endif %}
-                {% endwith %}
-                <label class="label">Username</label>
+                 {% endwith %}
+                <label class="label" >Username</label>
                 <div class="control has-icons-left has-icons-right">
-                  <input class="input" type="text" name="username" placeholder="Username">
+                  <input style="width: 1000px;" class="input" type="text" name="username" placeholder="Username">
                   <span class="icon is-small is-left">
                     <i class="fas fa-user"></i>
                   </span>
@@ -39,7 +40,7 @@
               <div class="field">
                 <label class="label">Password</label>
                 <p class="control has-icons-left">
-                  <input class="input" type="password" name="password" placeholder="Password">
+                  <input style="width: 1000px;" class="input" type="password" name="password" placeholder="Password">
                   <span class="icon is-small is-left">
                     <i class="fas fa-lock"></i>
                   </span>
