--- a/flask_app/static/main.css
+++ b/flask_app/static/main.css
@@ -221,6 +221,8 @@ a{
     margin: 0;
     padding: 0;
     background-color:rgba(110,110, 110, 0.25);
+      
+    border-radius: 10px;
   
   }
   
