--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -13,9 +13,11 @@
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
     
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
-
-    <title>app</title>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> 
+       
+      </script>
+    <title>Meteorological application</title>
+ 
 </head>
 <body>
    
@@ -89,8 +91,10 @@
               
                 </div>
                 <div >
-                       <button class="image-button">
+                    <form action="{{ url_for('home_blueprint.insertion') }}" method="post">
+                       <button class="image-button" type="submit">
                         <img src="../static/assets/icons/heart.png" alt="Nom de l'image"  class="icons"
+                        
                         alt="icon"
                         width="40"
                         height="40">
@@ -100,6 +104,7 @@
                         <span class="">Add to favorite</span>
                     
                     </small>
+                </form>
                 </div>
                  </div>
             </div>
