Ekher version de Sara

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -15,7 +15,7 @@
     
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"> </script>
 
-    <title>app</title>
+    <title>Weather Application</title>
 </head>
 <body>
    
@@ -55,7 +55,7 @@
                 <div class="city-time">
                     <h1 class="name">{{city['name']}}</h1>
                     <small>
-                        <span class="time">{{city['currentTime']}}</span>
+                        <span class="time">{{time}}</span>
                         -
                         <span class="date">
                             {{date}}
