--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -16,7 +16,7 @@
       <div class="container">
         <div class="columns is-centered">
           <div class="column is-half">
-            <form method="POST">
+            <form action="{{ url_for('authentication_blueprint.signup') }}" method="POST">
               <div class="field">
                 {% with messages = get_flashed_messages() %}
                 {% if messages %}
