--- a/flask_app/static/historique.css
+++ b/flask_app/static/historique.css
@@ -75,15 +75,18 @@ h1{
 
 .weather_day{
   
-    justify-content: space-between;
+    justify-content:center;
+    font-size: 20px;
 }
 
 .weather_historic_item{
     border-radius: 15px;
     background-color: rgba(255,255, 255,0.3);
-      
-    margin: 0px 30px 10px;
-    padding: 30px 35px 40px;
+    
+    margin-top: 80px;
+    
+
+
 }
 
 .search{
@@ -123,4 +126,57 @@ input.\=image_menu {
     border-radius: 15px;
    
    
+}
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color:rgba(110,110, 110, 0.25);
+      
+    border-radius: 10px;
+  
+  }
+  
+  .menu li {
+    display: inline-block;
+    border: 10px;
+  }
+  
+  .menu li a {
+    display: block;
+    padding: 10px 20px;
+    text-decoration: none;
+    color: white;
+ 
+  }
+  
+  .menu li a:hover {
+    background-color:rgba(110,110, 110, 0.25);
+    
+   
+  }
+  .image-button {
+    width: 20px; /* Largeur de l'image */
+    height: 30px; /* Hauteur de l'image */
+    background-size: cover; /* Ajuste la taille de l'image pour remplir le bouton */
+    background-repeat: no-repeat; /* EmpÃªche la rÃ©pÃ©tition de l'image */
+    border: none; /* Supprime la bordure par dÃ©faut du bouton */
+    cursor: pointer; /* Affiche un curseur pointer au survol */
+    outline: none; /* Supprime la bordure de focus du bouton */
+  }
+.weather-app-container{
+    color: #333;
+    text-decoration: none;
+    margin: 10px 20px 15px 30px;
+    
+}
+.button-lien,.image-button{
+    background: transparent;
+    border-radius: 10px;
+}
+.search-bar{
+    margin-left: 720px;
+}
+.value{
+    font-size: 25px;
 }
